--- a/consumption.html
+++ b/consumption.html
@@ -25,7 +25,7 @@
 
                     <div class="form-group row mt-3">
                       <label for="staticCategory" class="col-4 col-form-label">Категория</label>
-                      <div class="col-8 col-lg-4">
+                      <div class="col-6 col-lg-4">
                         <select class="form-control" id="staticCategory">
                           <option>Дом</option>
                           <option>Кредит</option>
@@ -36,6 +36,7 @@
                           <option>Другое</option>
                       </select>
                       </div>
+                      <a href="#" class=" col-auto bg-secondary text-decoration-none text-white rounded px-2 m-1"><b>+</b></a>    
                     </div>
 
                     <div class="form-group row mt-3">
