--- a/trans.html
+++ b/trans.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+
+    <link href="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+    <script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
     <title>Финансы</title>
 
 </head>
@@ -11,6 +15,57 @@
     <div class="container">
         <div class="row">
             <h2 class="mt-5 text-center">Транзакции</h2>
+            <form>
+              <p class="my-0">Вывести информацию</p>
+              <div class="form-group row mt-3">
+                <label for="staticDateFrom" class="col-1 col-form-label">С</label>
+                <div class="col-4">
+                  <input type="date" class="form-control" id="staticDateFrom">
+                </div>
+              </div>
+
+              <div class="form-group row mt-3">
+                <label for="staticDateUntil" class="col-1 col-form-label">По</label>
+                <div class="col-4">
+                  <input type="date" class="form-control" id="staticDateUntil">
+                </div>
+              </div>
+              <div class="form-group row mt-3">
+                <label class="col-1">Для</label>
+            
+                <div class="col-4">
+                  <select multiple="multiple">
+                    <optgroup label="Доход">
+                      <option>Зарплата №1</option>
+                      <option>Зарплата №2</option>
+                      <option>Возврат долга</option>
+                      <option>Без категории</option>
+                      <option>Подработка</option>
+                      <option>Приятные находки</option>
+                      <option>Инвестиции</option>
+                    </optgroup>
+                    <optgroup label="Расход">
+                      <option>Дом</option>
+                      <option>Кредит</option>
+                      <option>Продукты питания</option>
+                      <option>Еда вне дома</option>
+                      <option>Одежда и обувь</option>
+                      <option>Развлечения</option>
+                      <option>Другое</option>
+                    </optgroup>
+                  </select>
+                </div>
+              </div>
+
+              <div class="text-center col-5 mt-3">
+                <button type="button" class="btn btn-primary">Обновить</button>
+              </div>
+
+
+            </form>
+        </div>
+
+        <div class="row">
             <table class="table table-bordered border-dark mt-5">
                 <thead>
                   <tr>
@@ -20,6 +75,7 @@
                     <th scope="col">Группа</th>
                     <th scope="col">Комментарий</th>
                     <th scope="col">Чек</th>
+                    <th scope="col"></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -30,6 +86,11 @@
                     <td>Зарплата №1</td>
                     <td></td>
                     <td></td>
+                    <td class="text-center">
+                      <a href="#">Изменить</a>
+                      <br/>
+                      <a href="#">Удалить</a>
+                    </td>
                   </tr>
                   <tr>
                     <tr class="table-danger">
@@ -39,6 +100,11 @@
                         <td>Продукты питания</td>
                         <td></td>
                         <td>Фото</td>
+                        <td class="text-center">
+                          <a href="#">Изменить</a>
+                          <br/>
+                          <a href="#">Удалить</a>
+                        </td>
                   </tr>
                   <tr>
                     <tr class="table-danger">
@@ -48,10 +114,18 @@
                         <td>Дом</td>
                         <td>за 2 месяца</td>
                         <td>Фото</td>
+                        <td class="text-center">
+                          <a href="#">Изменить</a>
+                          <br/>
+                          <a href="#">Удалить</a>
+                        </td>
                   </tr>
                 </tbody>
               </table>
+
+  
         </div>
+
         <div class="row">
           <div class="text-center mt-3">
             <button type="button" onClick="location.href='list.html'" class="btn btn-primary">Понятно</button>
@@ -60,4 +134,13 @@
     </div>
     
 </body>
+
+<script>
+  $(function() {
+    $('select').multipleSelect({
+      multiple: true,
+      multipleWidth: 200
+    })
+  })
+</script>
 </html>
