--- a/analys.html
+++ b/analys.html
@@ -20,7 +20,7 @@
                 <p class="text-center text-success"><b>35 000 ₽</b></p>
                 <p>Из них</p>
                 <p class="text-center">Зарплата №1:<span class="text-success">30 000 ₽</span></p>
-                <p class="text-center">Инфестиции:<span class="text-success">5 000 ₽</span></p>
+                <p class="text-center">Инвестиции:<span class="text-success">5 000 ₽</span></p>
             </div>
         </div>
 
