--- a/plans.html
+++ b/plans.html
@@ -6,7 +6,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <title>Финансы</title>
 </head>
-<body>
+<body class="bg-light">
     <div class="container">
         <div class="row">
             <div class="col-12">
