little fix, add bill

--- a/trans.html
+++ b/trans.html
@@ -14,7 +14,7 @@
 <body class="bg-light">
     <div class="container">
         <div class="row">
-            <h2 class="mt-5 text-center">Транзакции</h2>
+            <h2 class="mt-5 text-center">Ваши операции</h2>
             <form>
               <p class="my-0">Вывести информацию</p>
               <div class="form-group row mt-3">
@@ -70,7 +70,7 @@
                 <thead>
                   <tr>
                     <th scope="col">Дата</th>
-                    <th scope="col">Операция</th>
+                    <th scope="col">Пользователь</th>
                     <th scope="col">Сумма</th>
                     <th scope="col">Группа</th>
                     <th scope="col">Комментарий</th>
@@ -81,8 +81,8 @@
                 <tbody>
                   <tr class="table-success">
                     <th scope="row">15.06.2021</th>
-                    <td>Доход</td>
-                    <td>10 000</td>
+                    <td>Илья</td>
+                    <td>+10 000</td>
                     <td>Зарплата №1</td>
                     <td></td>
                     <td></td>
@@ -95,8 +95,8 @@
                   <tr>
                     <tr class="table-danger">
                         <th scope="row">15.06.2021</th>
-                        <td>Расход</td>
-                        <td>1 500</td>
+                        <td>Илья</td>
+                        <td>-1 500</td>
                         <td>Продукты питания</td>
                         <td></td>
                         <td>Фото</td>
@@ -109,8 +109,8 @@
                   <tr>
                     <tr class="table-danger">
                         <th scope="row">20.06.2021</th>
-                        <td>Расход</td>
-                        <td>5 400</td>
+                        <td>Анна</td>
+                        <td>-5 400</td>
                         <td>Дом</td>
                         <td>за 2 месяца</td>
                         <td>Фото</td>
